# AndroidCrashPlugins

./: ANDROID_CODE_ANALYSIS.md  ANR_FALSE_POSITIVE_FIX_DESIGN.md  ANR_FIX_IMPLEMENTATION_SUMMARY.md  ANR_POWER_SAVE_MODE_ANALYSIS.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/crashreporter/lib/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/crashreporter/lib/: ExampleUnitTest.kt
crashreporter/: build.gradle.kts
crashreporter/src/main/: AndroidManifest.xml
crashreporter/src/main/cpp/: CMakeLists.txt  enhanced_native_crash_handler.cpp  native_crash_handler.cpp
gradle/wrapper/: gradle-wrapper.properties
